Db update 2.0 profile startup_list done

--- a/BePartner_App_Mid/Views/InHome/InEditPersonal.cshtml
+++ b/BePartner_App_Mid/Views/InHome/InEditPersonal.cshtml
@@ -99,7 +99,7 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label>Email</label>
-                                    <input type="text" class="form-control" disabled name="In_Email" value="@(Model!=null? Model.In_Email:"")">
+                                    <input type="text" class="form-control" name="In_Email" value="@(Model!=null? Model.In_Email:"")">
                                     <p class="text-danger">@Html.ValidationMessage("In_Email")</p>
                                 </div>
                             </div>
