--- a/BePartner_App_Mid/Views/InHome/InProfile.cshtml
+++ b/BePartner_App_Mid/Views/InHome/InProfile.cshtml
@@ -288,7 +288,7 @@
             </div>
         </div>
     </section>
-
+    <h2>@ViewBag.Message</h2>
 
     @Scripts.Render("~/Content/InValid.js")
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
