--- a/BePartner_App_Mid/Views/Investor/InLogin.cshtml
+++ b/BePartner_App_Mid/Views/Investor/InLogin.cshtml
@@ -32,7 +32,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><input type="password" id="passShow" name="Password" class="form-control" value="@(Model!=null? Model.ConfirmPassword:"")"></td>
+                    <td><input type="password" id="passShow" name="Password" class="form-control" value="@(Model!=null? Model.Password:"")"></td>
                 </tr>
                 <tr>
                     <td class="text-danger">@Html.Raw(ViewBag.Message)</td>
