--- a/BePartner_App_Mid/Content/Site.css
+++ b/BePartner_App_Mid/Content/Site.css
@@ -137,9 +137,10 @@ input[type = "text"] {
 
 
 .shadow {
-    
     width: 114%;
-    box-shadow: 0 2px 10px #f9f9f9 !important;
+    /*box-shadow: 0 2px 10px #f9f9f9 !important;*/
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1) !important;
+    
     background-color: rgb(240, 240, 240);
 }
 
@@ -173,6 +174,52 @@ input[type = "text"] {
     border: 5px solid #fff;
 }
 
+/********************************Product LIst*/
+
+.In-StartupShadow {
+    margin-bottom: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1) !important;
+    background-color: rgb(240, 240, 240);
+}
+
+
+.ratings i {
+    font-size: 16px;
+    color: red
+}
+
+.strike-text {
+    color: red;
+    text-decoration: line-through
+}
+
+.product-image {
+    width: 100%
+}
+
+.dot {
+    height: 7px;
+    width: 7px;
+    margin-left: 6px;
+    margin-right: 6px;
+    margin-top: 3px;
+    background-color: blue;
+    border-radius: 50%;
+    display: inline-block
+}
+
+.spec-1 {
+    color: #938787;
+    font-size: 15px
+}
+
+h5 {
+    font-weight: 400
+}
+
+.para {
+    font-size: 16px
+}
 
 
 
