--- a/BePartner_App_Mid/Views/InHome/InProfile.cshtml
+++ b/BePartner_App_Mid/Views/InHome/InProfile.cshtml
@@ -1,24 +1,26 @@
 ﻿
+@{
+    Layout = "~/Views/Shared/_In_Layout.cshtml";
+}
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Account Settings UI Design</title>
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes" name="viewport">
-    <!--<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">-->
+    @*<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes" name="viewport">
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">*@
+    @*<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">*@
     @*<link rel="stylesheet" type="text/css" href="@Url.Content("~Content/InProfileStyle.css")">*@
-    @*@Styles.Render("~Content/InProfileStyle.css")*@
+    @*<link href="~/Content/Site.css" rel="stylesheet" type="text/css">*@
 
 </head>
 <body>
     <section class="profile-body">
         <div class="Inprofile-container">
             @*<h1 class="mb-5">My Account</h1>*@
-            <div class=" shadow rounded-lg d-block d-sm-flex">
+            <div class=" investor-shadow rounded-lg d-block d-sm-flex">
                 <div class="profile-tab-nav border-right">
                     <div class="p-4">
                         <div class="img-circle text-center mb-3">
-                            <img src="~/Img/11.jpg" alt="Image" class="shadow">
+                            <img src="~/Img/11.jpg" alt="Image" class="investor-shadow">
 
                         </div>
                         <h2 class="text-center">@(Model!=null? Model.FirstName:"") @(Model!=null? Model.LastName:"")</h2>
@@ -26,16 +28,16 @@
                     </div>
                     <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                         <a class="nav-link active" id="account-tab" data-toggle="pill" href="#account" role="tab" aria-controls="account" aria-selected="true">
-                            <i class="fa fa-home text-center mr-1"></i>
+                            <i class="fa fa-user text-center mr-1"></i>
                             Personal Information
                         </a>
 
                         <a class="nav-link" id="application-tab" data-toggle="pill" href="#application" role="tab" aria-controls="application" aria-selected="false">
-                            <i class="fa fa-tv text-center mr-1"></i>
+                            <i class="fa fa-building text-center mr-1"></i>
                             Professional Information
                         </a>
                         <a class="nav-link" id="security-tab" data-toggle="pill" href="#security" role="tab" aria-controls="security" aria-selected="false">
-                            <i class="fa fa-user text-center mr-1"></i>
+                            <i class="fa fa-briefcase text-center mr-1"></i>
                             My Investments
                         </a>
                         <a class="nav-link" id="password-tab" data-toggle="pill" href="#password" role="tab" aria-controls="password" aria-selected="false">
@@ -45,6 +47,10 @@
                         <a class="nav-link" id="notification-tab" data-toggle="pill" href="#notification" role="tab" aria-controls="notification" aria-selected="false">
                             <i class="fa fa-bell text-center mr-1"></i>
                             Notification
+                        </a>
+                        <a class="nav-link text-danger" id="notification-tab" data-toggle="pill" href="#notification" role="tab" aria-controls="notification" aria-selected="false">
+                            <i class="fa fa-sign-out text-center mr-1 text-danger"></i>
+                            Logout
                         </a>
                     </div>
                 </div>
