--- a/BePartner_App_Mid/Views/InHome/InStartups.cshtml
+++ b/BePartner_App_Mid/Views/InHome/InStartups.cshtml
@@ -1,13 +1,16 @@
-﻿<html>
+﻿@{
+    Layout = "~/Views/Shared/_In_Layout.cshtml";
+}
+<html>
 <head>
-
+    @*<link href="~/Content/Site.css" rel="stylesheet" type="text/css">*@
 </head>
 <body>
 
-    <div class="Instartups-container mt-5 mb-5" >
+    <div class="Instartups-container mt-5 mb-5">
         <div class="d-flex justify-content-center row">
             <div class="col-md-12">
-                @foreach(var i in Model)
+                @foreach (var i in Model)
                 {
                     <div class="row p-2 bg-white border In-StartupShadow rounded">
                         <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/QpjAiHq.jpg"></div>
@@ -33,70 +36,72 @@
                             <div class="d-flex flex-row sa_align-items-center">
                                 <h6 class="text-success mr-1">Total Profit: @i.Total_Profit$</h6>
                             </div>
-                            
-                            <div class="d-flex flex-column mt-4"><button class="btn btn-primary btn-sm" type="button">Details</button>
-                            <button class="btn btn-outline-primary btn-sm mt-2" type="button">Send Offer</button></div>
+
+                            <div class="d-flex flex-column mt-4">
+                                <button class="btn btn-primary btn-sm" type="button">Details</button>
+                                <button class="btn btn-outline-primary btn-sm mt-2" type="button">Send Offer</button>
+                            </div>
                         </div>
                     </div>
                 }
 
                 @*<div class="row p-2 bg-white border rounded mt-2">
-            <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/JvPeqEF.jpg"></div>
-            <div class="col-md-6 mt-1">
-                <h5>Quant trident shirts</h5>
-                <div class="d-flex flex-row">
-                    <div class="ratings mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div><span>310</span>
-                </div>
-                <div class="mt-1 mb-1 spec-1"><span>100% cotton</span><span class="dot"></span><span>Light weight</span><span class="dot"></span><span>Best finish<br></span></div>
-                <div class="mt-1 mb-1 spec-1"><span>Unique design</span><span class="dot"></span><span>For men</span><span class="dot"></span><span>Casual<br></span></div>
-                <p class="text-justify text-truncate para mb-0">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.<br><br></p>
-            </div>
-            <div class="sa_align-items-center align-content-center col-md-3 border-left mt-1">
-                <div class="d-flex flex-row sa_align-items-center">
-                    <h4 class="mr-1">$14.99</h4><span class="strike-text">$20.99</span>
-                </div>
-                <h6 class="text-success">Free shipping</h6>
-                <div class="d-flex flex-column mt-4"><button class="btn btn-primary btn-sm" type="button">Details</button><button class="btn btn-outline-primary btn-sm mt-2" type="button">Add to wishlist</button></div>
-            </div>
-        </div>
-        <div class="row p-2 bg-white border rounded mt-2">
-            <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/Bf4dIaN.jpg"></div>
-            <div class="col-md-6 mt-1">
-                <h5>Quant ruybi shirts</h5>
-                <div class="d-flex flex-row">
-                    <div class="ratings mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div><span>123</span>
-                </div>
-                <div class="mt-1 mb-1 spec-1"><span>100% cotton</span><span class="dot"></span><span>Light weight</span><span class="dot"></span><span>Best finish<br></span></div>
-                <div class="mt-1 mb-1 spec-1"><span>Unique design</span><span class="dot"></span><span>For men</span><span class="dot"></span><span>Casual<br></span></div>
-                <p class="text-justify text-truncate para mb-0">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.<br><br></p>
-            </div>
-            <div class="sa_align-items-center align-content-center col-md-3 border-left mt-1">
-                <div class="d-flex flex-row sa_align-items-center">
-                    <h4 class="mr-1">$13.99</h4><span class="strike-text">$20.99</span>
-                </div>
-                <h6 class="text-success">Free shipping</h6>
-                <div class="d-flex flex-column mt-4"><button class="btn btn-primary btn-sm" type="button">Details</button><button class="btn btn-outline-primary btn-sm mt-2" type="button">Add to wishlist</button></div>
-            </div>
-        </div>
-        <div class="row p-2 bg-white border rounded mt-2">
-            <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/HO8e9b8.jpg"></div>
-            <div class="col-md-6 mt-1">
-                <h5>Quant tinor shirts</h5>
-                <div class="d-flex flex-row">
-                    <div class="ratings mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div><span>110</span>
-                </div>
-                <div class="mt-1 mb-1 spec-1"><span>100% cotton</span><span class="dot"></span><span>Light weight</span><span class="dot"></span><span>Best finish<br></span></div>
-                <div class="mt-1 mb-1 spec-1"><span>Unique design</span><span class="dot"></span><span>For men</span><span class="dot"></span><span>Casual<br></span></div>
-                <p class="text-justify text-truncate para mb-0">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.<br><br></p>
-            </div>
-            <div class="sa_align-items-center align-content-center col-md-3 border-left mt-1">
-                <div class="d-flex flex-row sa_align-items-center">
-                    <h4 class="mr-1">$15.99</h4><span class="strike-text">$21.99</span>
-                </div>
-                <h6 class="text-success">Free shipping</h6>
-                <div class="d-flex flex-column mt-4"><button class="btn btn-primary btn-sm" type="button">Details</button><button class="btn btn-outline-primary btn-sm mt-2" type="button">Add to wishlist</button></div>
-            </div>
-        </div>*@
+                        <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/JvPeqEF.jpg"></div>
+                        <div class="col-md-6 mt-1">
+                            <h5>Quant trident shirts</h5>
+                            <div class="d-flex flex-row">
+                                <div class="ratings mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div><span>310</span>
+                            </div>
+                            <div class="mt-1 mb-1 spec-1"><span>100% cotton</span><span class="dot"></span><span>Light weight</span><span class="dot"></span><span>Best finish<br></span></div>
+                            <div class="mt-1 mb-1 spec-1"><span>Unique design</span><span class="dot"></span><span>For men</span><span class="dot"></span><span>Casual<br></span></div>
+                            <p class="text-justify text-truncate para mb-0">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.<br><br></p>
+                        </div>
+                        <div class="sa_align-items-center align-content-center col-md-3 border-left mt-1">
+                            <div class="d-flex flex-row sa_align-items-center">
+                                <h4 class="mr-1">$14.99</h4><span class="strike-text">$20.99</span>
+                            </div>
+                            <h6 class="text-success">Free shipping</h6>
+                            <div class="d-flex flex-column mt-4"><button class="btn btn-primary btn-sm" type="button">Details</button><button class="btn btn-outline-primary btn-sm mt-2" type="button">Add to wishlist</button></div>
+                        </div>
+                    </div>
+                    <div class="row p-2 bg-white border rounded mt-2">
+                        <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/Bf4dIaN.jpg"></div>
+                        <div class="col-md-6 mt-1">
+                            <h5>Quant ruybi shirts</h5>
+                            <div class="d-flex flex-row">
+                                <div class="ratings mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div><span>123</span>
+                            </div>
+                            <div class="mt-1 mb-1 spec-1"><span>100% cotton</span><span class="dot"></span><span>Light weight</span><span class="dot"></span><span>Best finish<br></span></div>
+                            <div class="mt-1 mb-1 spec-1"><span>Unique design</span><span class="dot"></span><span>For men</span><span class="dot"></span><span>Casual<br></span></div>
+                            <p class="text-justify text-truncate para mb-0">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.<br><br></p>
+                        </div>
+                        <div class="sa_align-items-center align-content-center col-md-3 border-left mt-1">
+                            <div class="d-flex flex-row sa_align-items-center">
+                                <h4 class="mr-1">$13.99</h4><span class="strike-text">$20.99</span>
+                            </div>
+                            <h6 class="text-success">Free shipping</h6>
+                            <div class="d-flex flex-column mt-4"><button class="btn btn-primary btn-sm" type="button">Details</button><button class="btn btn-outline-primary btn-sm mt-2" type="button">Add to wishlist</button></div>
+                        </div>
+                    </div>
+                    <div class="row p-2 bg-white border rounded mt-2">
+                        <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/HO8e9b8.jpg"></div>
+                        <div class="col-md-6 mt-1">
+                            <h5>Quant tinor shirts</h5>
+                            <div class="d-flex flex-row">
+                                <div class="ratings mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div><span>110</span>
+                            </div>
+                            <div class="mt-1 mb-1 spec-1"><span>100% cotton</span><span class="dot"></span><span>Light weight</span><span class="dot"></span><span>Best finish<br></span></div>
+                            <div class="mt-1 mb-1 spec-1"><span>Unique design</span><span class="dot"></span><span>For men</span><span class="dot"></span><span>Casual<br></span></div>
+                            <p class="text-justify text-truncate para mb-0">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.<br><br></p>
+                        </div>
+                        <div class="sa_align-items-center align-content-center col-md-3 border-left mt-1">
+                            <div class="d-flex flex-row sa_align-items-center">
+                                <h4 class="mr-1">$15.99</h4><span class="strike-text">$21.99</span>
+                            </div>
+                            <h6 class="text-success">Free shipping</h6>
+                            <div class="d-flex flex-column mt-4"><button class="btn btn-primary btn-sm" type="button">Details</button><button class="btn btn-outline-primary btn-sm mt-2" type="button">Add to wishlist</button></div>
+                        </div>
+                    </div>*@
             </div>
         </div>
     </div>
