--- a/BePartner_App_Mid/Views/Investor/Registration2.cshtml
+++ b/BePartner_App_Mid/Views/Investor/Registration2.cshtml
@@ -3,6 +3,8 @@
     ViewBag.Title = "Registration2";
 }
 
+<link href="~/Content/Site.css" rel="stylesheet" type="text/css">
+
 <h2>Professional Information</h2>
 
 <form action="" method="post" class="in-registration">
