--- a/BePartner_App_Mid/Views/Investor/Registration3.cshtml
+++ b/BePartner_App_Mid/Views/Investor/Registration3.cshtml
@@ -3,6 +3,8 @@
     ViewBag.Title = "Registration3";
 }
 
+<link href="~/Content/Site.css" rel="stylesheet" type="text/css">
+
 <h2>Password </h2>
 
 <form action="" method="post" class="in-registration">
