--- a/BePartner_App_Mid/Content/Site.css
+++ b/BePartner_App_Mid/Content/Site.css
@@ -1,8 +1,8 @@
-﻿body {
+﻿/*body {
     margin:15px;
     padding-top: 00px;
     padding-bottom: 20px;
-}
+}*/
 
 /* Set padding to keep content from hitting the edges */
 /*.body-content {
@@ -33,7 +33,7 @@ textarea {
 
 
 
-/*############## ############# ######### INVESTORS CSS STARTS ############## ############ ###############*/
+/*############## ############# ######### INVESTORS CSS STARTS RIFAT ############## ############ ###############*/
 /*****************registration*/
 .in-registration {
     padding-top:20px;
@@ -122,8 +122,8 @@ textarea {
 
 .Inprofile-container {
     /*display:inline-block;*/
-    margin-top: 20px;
-    margin-left:-16%;
+    margin-top: -2%;
+    margin-left:-19%;
 
 }
 
@@ -136,9 +136,9 @@ input[type = "text"] {
 
 
 
-.shadow {
-    width: 114%;
-    /*box-shadow: 0 2px 10px #f9f9f9 !important;*/
+.investor-shadow {
+    width: 116%;
+    box-shadow: 0 2px 10px #f9f9f9 !important;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1) !important;
     
     background-color: rgb(240, 240, 240);
