--- a/BePartner_App_Mid/Views/Home/Index.cshtml
+++ b/BePartner_App_Mid/Views/Home/Index.cshtml
@@ -6,9 +6,9 @@
 }
 
 <div class="jumbotron" style="background-color:black">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>BEPARTNER</h1>
+    <p class="lead">Find The Best Entrepreneur To Invest.</p>
+    <p><a href="@Url.Action("Index","Investor")" class="btn btn-primary btn-lg">Become an Investor &raquo;</a></p>
 </div>
 
 <div class="row">
