--- a/BePartner_App_Mid/Views/InHome/InEditPass.cshtml
+++ b/BePartner_App_Mid/Views/InHome/InEditPass.cshtml
@@ -1,24 +1,29 @@
 ﻿
+@{
+    Layout = "~/Views/Shared/_In_Layout.cshtml";
+}
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <!--<meta charset="UTF-8">
     <title>Account Settings UI Design</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes" name="viewport">
     <!--<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">-->
-    @*<link rel="stylesheet" type="text/css" href="@Url.Content("~Content/InProfileStyle.css")">*@
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">-->-->
+    <!--@*<link rel="stylesheet" type="text/css" href="@Url.Content("~Content/InProfileStyle.css")">*@
     @*@Styles.Render("~Content/InProfileStyle.css")*@
+    <link href="~/Content/Site.css" rel="stylesheet" type="text/css">-->
 
 </head>
 <body>
     <section class="profile-body">
         <div class="Inprofile-container">
             @*<h1 class="mb-5">My Account</h1>*@
-            <div class=" shadow rounded-lg d-block d-sm-flex">
+            <div class=" investor-shadow rounded-lg d-block d-sm-flex">
                 <div class="profile-tab-nav border-right">
                     <div class="p-4">
                         <div class="img-circle text-center mb-3">
-                            <img src="~/Img/11.jpg" alt="Image" class="shadow">
+                            <img src="~/Img/11.jpg" alt="Image" class="investor-shadow">
 
                         </div>
                         <h2 class="text-center">@(Model!=null? Model.FirstName:"") @(Model!=null? Model.LastName:"")</h2>
@@ -30,7 +35,7 @@
                             Personal Information
                         </a>
 
-                        <a class="nav-link"  href="@Url.Action("InEditProfessional","InHome")" role="tab" aria-controls="application" aria-selected="false">
+                        <a class="nav-link" href="@Url.Action("InEditProfessional","InHome")" role="tab" aria-controls="application" aria-selected="false">
                             <i class="fa fa-tv text-center mr-1"></i>
                             Professional Information
                         </a>
@@ -49,17 +54,17 @@
                     </div>
                 </div>
                 <div class="tab-content p-4 p-md-5" id="v-pills-tabContent">
-                    
+
                     <div class="active tab-pane fade show" id="password" role="tabpanel" aria-labelledby="password-tab">
                         <h3 class="mb-4">Security</h3>
-                       <form action="" method="post">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <label>Old password</label>
-                                    <input type="password" name="OldPassword" class="form-control">
-                                    <p class="text-danger">@Html.ValidationMessage("OldPassword")</p>
-                                </div>
+                        <form action="" method="post">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label>Old password</label>
+                                        <input type="password" name="OldPassword" class="form-control">
+                                        <p class="text-danger">@Html.ValidationMessage("OldPassword")</p>
+                                    </div>
                                 </div>
                                 <div class="col-md-12">
                                     <div class="form-group">
@@ -75,37 +80,37 @@
                                         <p class="text-danger">@Html.ValidationMessage("ConfirmNewPassword")</p>
                                     </div>
                                 </div>
-                        </div>
-                        @*<div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label>Old password</label>
-                                        <input type="password" class="form-control">
-                                    </div>
-                                </div>
                             </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label>New password</label>
-                                        <input type="password" class="form-control">
+                            @*<div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label>Old password</label>
+                                            <input type="password" class="form-control">
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label>Confirm new password</label>
-                                        <input type="password" class="form-control">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label>New password</label>
+                                            <input type="password" class="form-control">
+                                        </div>
                                     </div>
-                                </div>
-                            </div>*@
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <label>Confirm new password</label>
+                                            <input type="password" class="form-control">
+                                        </div>
+                                    </div>
+                                </div>*@
 
-                        <div>
-                            <input type="submit" value="Update" class="btn btn-primary">
-                            <button class="btn btn-light">Cancel</button>
-                        </div>
-                           </form>
+                            <div>
+                                <input type="submit" value="Update" class="btn btn-primary">
+                                <button class="btn btn-light">Cancel</button>
+                            </div>
+                        </form>
                     </div>
-                    
+
                 </div>
             </div>
         </div>
