--- a/BePartner_App_Mid/Views/InHome/InEditPersonal.cshtml
+++ b/BePartner_App_Mid/Views/InHome/InEditPersonal.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@{
+    Layout = "~/Views/Shared/_In_Layout.cshtml";
+}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,17 +10,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">-->
     @*<link rel="stylesheet" type="text/css" href="@Url.Content("~Content/InProfileStyle.css")">*@
     @*@Styles.Render("~Content/InProfileStyle.css")*@
-
+    <link href="~/Content/Site.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <section class="profile-body">
         <div class="Inprofile-container">
             @*<h1 class="mb-5">My Account</h1>*@
-            <div class=" shadow rounded-lg d-block d-sm-flex">
+            <div class=" investor-shadow rounded-lg d-block d-sm-flex">
                 <div class="profile-tab-nav border-right">
                     <div class="p-4">
                         <div class="img-circle text-center mb-3">
-                            <img src="~/Img/11.jpg" alt="Image" class="shadow">
+                            <img src="~/Img/11.jpg" alt="Image" class="investor-shadow">
 
                         </div>
                         <h2 class="text-center">@(Model!=null? Model.FirstName:"") @(Model!=null? Model.LastName:"")</h2>
@@ -26,16 +28,16 @@
                     </div>
                     <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
 
-                            <a class="nav-link active" id="account-tab" data-toggle="pill" href="#account" role="tab" aria-controls="account" aria-selected="true">
-                                <i class="fa fa-home text-center mr-1"></i>
-                                Personal Information
-                            </a>
-                       
-                            <a class="nav-link" href="@Url.Action("InEditProfessional","InHome")" role="tab" aria-controls="application" aria-selected="false">
-                                <i class="fa fa-tv text-center mr-1"></i>
-                                Professional Information
-                            </a>
-                        
+                        <a class="nav-link active" id="account-tab" data-toggle="pill" href="#account" role="tab" aria-controls="account" aria-selected="true">
+                            <i class="fa fa-home text-center mr-1"></i>
+                            Personal Information
+                        </a>
+
+                        <a class="nav-link" href="@Url.Action("InEditProfessional","InHome")" role="tab" aria-controls="application" aria-selected="false">
+                            <i class="fa fa-tv text-center mr-1"></i>
+                            Professional Information
+                        </a>
+
 
                         <a class="nav-link" id="security-tab" data-toggle="pill" href="#security" role="tab" aria-controls="security" aria-selected="false">
                             <i class="fa fa-user text-center mr-1"></i>
@@ -53,77 +55,77 @@
                 </div>
                 <div class="tab-content p-4 p-md-5" id="v-pills-tabContent">
                     <div class=" active tab-pane fade show " id="account" role="tabpanel" aria-labelledby="account-tab">
-                        
+
                         <form action="" method="post">
-                        <h3 class="mb-4">Personal Information</h3>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label>First Name</label>
-                                    <input type="text" name="FirstName" class="form-control" value="@(Model!=null? Model.FirstName:"")">
-                                    <p class="text-danger">@Html.ValidationMessage("FirstName")</p>
+                            <h3 class="mb-4">Personal Information</h3>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>First Name</label>
+                                        <input type="text" name="FirstName" class="form-control" value="@(Model!=null? Model.FirstName:"")">
+                                        <p class="text-danger">@Html.ValidationMessage("FirstName")</p>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>Last Name</label>
+                                        <input type="text" class="form-control" name="LastName" value="@(Model!=null? Model.LastName:"")">
+                                        <p class="text-danger">@Html.ValidationMessage("LastName")</p>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>Gender</label>
+                                        <select name="Gender" class="form-control">
+                                            <option value="Male">Male</option>
+                                            <option value="Female">Female</option>
+                                            <option value="Other">Other</option>
+                                        </select>
+                                        <p class="text-danger">@Html.ValidationMessage("Gender")</p>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>Date-of-birth</label>
+                                        <input type="date" class="form-control" name="Dob" value="@(Model!=null? Model.Dob:"")">
+                                        <p class="text-danger ">@Html.ValidationMessage("Dob")</p>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>Phone</label>
+                                        <input type="text" class="form-control" name="Phone" value="@(Model!=null? Model.Phone:"")">
+                                        <p class="text-danger">@Html.ValidationMessage("Phone")</p>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>Email</label>
+                                        <input type="text" class="form-control" name="In_Email" value="@(Model!=null? Model.In_Email:"")">
+                                        <p class="text-danger">@Html.ValidationMessage("In_Email")</p>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label>National Identity Number</label>
+                                        <input type="text" class="form-control" name="Nid" value="@(Model!=null? Model.Nid:"")">
+                                        <p class="text-danger">@Html.ValidationMessage("Nid")</p>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label>Permanent Address</label>
+                                        <textarea class="form-control" name="Address" rows="4">@(Model!=null? Model.Address:"")</textarea>
+                                        <p class="text-danger">@Html.ValidationMessage("Address")</p>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label>Last Name</label>
-                                    <input type="text" class="form-control" name="LastName" value="@(Model!=null? Model.LastName:"")">
-                                    <p class="text-danger">@Html.ValidationMessage("LastName")</p>
-                                </div>
+                            <div>
+
+                                @*<a href="">Edit information</a>*@
+                                <input type="submit" value="Update" class="btn btn-primary">
+                                <button class="btn btn-light">Cancel</button>
                             </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label>Gender</label>
-                                    <select name="Gender" class="form-control">
-                                        <option value="Male">Male</option>
-                                        <option value="Female">Female</option>
-                                        <option value="Other">Other</option>
-                                    </select>
-                                    <p class="text-danger">@Html.ValidationMessage("Gender")</p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label>Date-of-birth</label>
-                                    <input type="date" class="form-control" name="Dob" value="@(Model!=null? Model.Dob:"")">
-                                    <p class="text-danger ">@Html.ValidationMessage("Dob")</p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label>Phone</label>
-                                    <input type="text" class="form-control" name="Phone" value="@(Model!=null? Model.Phone:"")">
-                                    <p class="text-danger">@Html.ValidationMessage("Phone")</p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label>Email</label>
-                                    <input type="text" class="form-control" name="In_Email" value="@(Model!=null? Model.In_Email:"")">
-                                    <p class="text-danger">@Html.ValidationMessage("In_Email")</p>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <label>National Identity Number</label>
-                                    <input type="text" class="form-control" name="Nid" value="@(Model!=null? Model.Nid:"")">
-                                    <p class="text-danger">@Html.ValidationMessage("Nid")</p>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <label>Permanent Address</label>
-                                    <textarea class="form-control" name="Address" rows="4">@(Model!=null? Model.Address:"")</textarea>
-                                    <p class="text-danger">@Html.ValidationMessage("Address")</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div>
-                            
-                            @*<a href="">Edit information</a>*@
-                             <input type="submit" value="Update" class="btn btn-primary">
-                            <button class="btn btn-light">Cancel</button> 
-                        </div>
                         </form>
                     </div>
                 </div>
