--- a/BePartner_App_Mid/Views/Investor/Registration.cshtml
+++ b/BePartner_App_Mid/Views/Investor/Registration.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Registration";
 }
 
-
+<link href="~/Content/Site.css" rel="stylesheet" type="text/css">
 
 <form action="" method="post" class="in-registration">
     <img class="in-reg-img" src="~/Img/title_logo.png" alt="" height="100" width="100">
