database change messenger inbox done

--- a/BePartner_App_Mid/Views/Shared/_In_Layout.cshtml
+++ b/BePartner_App_Mid/Views/Shared/_In_Layout.cshtml
@@ -31,11 +31,11 @@
         <div id="content">
 
             <!-- Topbar -->
-            <nav class="navbar navbar-expand navbar-light topbar mb-4 static-top shadow sticky-top" style="background-color:black;">
+            <nav class="navbar navbar-expand navbar-light topbar mb-4 static-top shadow sticky-top" id="navbar" style="background-color: black;">
 
                 <!-- Sidebar Toggle (Topbar) -->
 
-                <a class="sidebar-brand d-flex sa_align-items-center justify-content-center " href="@Url.Action("Index","Home")">
+                <a class="sidebar-brand d-flex sa_align-items-center justify-content-center logo" href="@Url.Action("Index","Home")">
 
                     <img src="~/Img/page logo (2).png" asp-append-version="true" width="200" height="45" style="position:relative;">
                 </a>
